--- a/example-client/pom.xml
+++ b/example-client/pom.xml
@@ -16,6 +16,21 @@
 
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>com.zshs</groupId>
+            <artifactId>rpc-framework-simple</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.zshs</groupId>
+            <artifactId>example-server</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
 
     </dependencies>
 
