--- a/example-server/pom.xml
+++ b/example-server/pom.xml
@@ -16,6 +16,16 @@
 
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>com.zshs</groupId>
+            <artifactId>rpc-framework-simple</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
 
     </dependencies>
 
