--- a/rpc-framework-simple/pom.xml
+++ b/rpc-framework-simple/pom.xml
@@ -49,6 +49,16 @@
             <artifactId>spring-context</artifactId>
             <version>${spring.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
         <!-- protostuff -->
         <dependency>
             <groupId>io.protostuff</groupId>
