--- a/example-server/src/main/resources/application-dev1.yml
+++ b/example-server/src/main/resources/application-dev1.yml
@@ -6,11 +6,12 @@ server:
 
 rpc:
   server:
-    port: 8887 # socketServer端口
-    host: 127.0.0.1 # socketServer地址
+    netty:
+      port: 8887 # netty端口
+      host: 127.0.0.1 # netty地址
+    socket:
+      port: 7776 # socket端口
+      host: 127.0.0.1 # socket地址
     registry:
       zookeeper:
         address: 192.168.170.129:2181
-
-
-
