--- a/example-server/src/main/resources/application-dev3.yml
+++ b/example-server/src/main/resources/application-dev3.yml
@@ -7,8 +7,12 @@ server:
 
 rpc:
   server:
-    port: 8885 # socketServer端口
-    host: 127.0.0.1 # socketServer地址
+    netty:
+      port: 8885 # netty端口
+      host: 127.0.0.1 # netty地址
+    socket:
+      port: 7774 # socket端口
+      host: 127.0.0.1 # socket地址
     registry:
       zookeeper:
         address: 192.168.170.129:2181
